--- a/src/DIPS.Xamarin.UI/Controls/Pdf/PdfViewer.xaml
+++ b/src/DIPS.Xamarin.UI/Controls/Pdf/PdfViewer.xaml
@@ -3,41 +3,56 @@
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:Pdf="clr-namespace:DIPS.Xamarin.UI.Controls.Pdf;assembly=DIPS.Xamarin.UI"
+             xmlns:Colors="clr-namespace:DIPS.Xamarin.UI.Resources.Colors;assembly=DIPS.Xamarin.UI"
              mc:Ignorable="d"
              x:Class="DIPS.Xamarin.UI.Controls.Pdf.PdfViewer">
+    <OnPlatform x:TypeArguments="View">
+        <On Platform="Android">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <!--<StackLayout Grid.Row="0"
-                     Orientation="Horizontal">
-            <Button Text="Zoom in"
-                    Clicked="OnZoomedIn" />
-            <Button Text="Zoom out"
-                    Clicked="OnZoomedOut" />
-        </StackLayout>-->
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            <Slider x:Name="slider"
-                    Grid.Column="0"
-                    Maximum="10"
-                    Minimum="1"
-                    ValueChanged="Slider_OnValueChanged" />
-            <Button Grid.Column="1"
-                    Text="Reset"
-                    Clicked="Reset"/>
-        </Grid>
-        <Pdf:ZoomContainer Grid.Row="1"
-                           x:Name="ZoomContainer"
-                           IsClippedToBounds="True"
-                           >
-            <Pdf:PdfRenderer x:Name="PdfRenderer"
-                              />
-        </Pdf:ZoomContainer>
-    </Grid>
+                </Grid.RowDefinitions>
+                <Pdf:ZoomContainer Grid.Row="0"
+                                   x:Name="ZoomContainer"
+                                   IsClippedToBounds="True">
+                    <Pdf:PdfRenderer x:Name="PdfRenderer" />
+                </Pdf:ZoomContainer>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="{Binding Source={x:Reference PdfRenderer}, Path=CurrentPageIndex}" />
+                                <Span Text=" / " />
+                                <Span Text="{Binding Source={x:Reference PdfRenderer}, Path=PageCount}" />
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+                    <Slider x:Name="slider"
+                            Grid.Column="1"
+                            BackgroundColor="{x:Static Colors:ColorPalette.LightAir}"
+                            Maximum="10"
+                            Minimum="1"
+                            ValueChanged="Slider_OnValueChanged" />
+                    <Button Grid.Column="2"
+                            Text="Reset"
+                            Clicked="Reset" />
+
+                </Grid>
+            </Grid>
+
+        </On>
+        <On Platform="iOS">
+            <Pdf:PdfWebView x:Name="PdfWebView"
+                            VerticalOptions="FillAndExpand"
+                            HorizontalOptions="FillAndExpand" />
+        </On>
+    </OnPlatform>
 </ContentView>
